--- a/Day_4.ipynb
+++ b/Day_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOa0gr/95YbK+kk547iuAbA",
+      "authorship_tag": "ABX9TyPPSVd6Q7vnT3VN+PoICjBK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Whole Network Entropy** (**Day 3**)\n",
+        "## **Random Forest** (**Day 4**)\n",
         "\n",
         "# **IMPORTANT!** Before we begin, change runtime type to R"
       ],
