--- a/Day_2.ipynb
+++ b/Day_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcVoTCl55jIOAn3x4T9GoE",
+      "authorship_tag": "ABX9TyMNJTpKtKaMUYB26omR0Uli",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -288,17 +288,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**5. Perform a statistical test to show if the differences in cell type proportions between disease stage are significant**\n",
-        "\n",
-        "* T-test in ggplot, between disease stage and cell type\n"
-      ],
-      "metadata": {
-        "id": "zQfGbj3uRDcG"
-      }
     },
     {
       "cell_type": "code",
@@ -597,6 +586,24 @@
       ],
       "metadata": {
         "id": "OqXMCY4cddCw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Try different databases, use listGeneSet() to view the databases available"
+      ],
+      "metadata": {
+        "id": "MGWt9LYpljov"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KcVMT9EvljQU"
       },
       "execution_count": null,
       "outputs": []
