--- a/Day_4.ipynb
+++ b/Day_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPSVd6Q7vnT3VN+PoICjBK",
+      "authorship_tag": "ABX9TyMzkc3SgJYU/4r4vvyx9ggL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "6_9acehClOLM"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
         },
         "outputId": "1f398256-07d4-453e-b362-b520c6a721c6"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +153,7 @@
         },
         "outputId": "dd2b6563-4b58-4e59-96e5-63469710b0d5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,88 +202,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **4. Smote**\n"
+        "**4. Splitting dataset and using Smote**\n"
       ],
       "metadata": {
         "id": "t87clHeB0klV"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**SMOTE (Synthetic Minority Over-sampling Technique)**: A method used to address the issue of imbalanced datasets in machine learning. It helps balance the classes by creating synthetic examples of the minority class rather than simply duplicating existing ones. This makes the dataset more suitable for training machine learning models, which often perform poorly on imbalanced datasets."
-      ],
-      "metadata": {
-        "id": "HOeDALpXNmK8"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "install.packages(\"performanceEstimation\")\n",
-        "library(performanceEstimation)\n",
-        "\n",
-        "exp_data_SE2$Disease_stage <- as.factor(exp_data_SE2$Disease_stage)\n",
-        "\n",
-        "table(exp_data_SE2$Disease_stage)\n",
-        "exp_data_SE2_smoted <- performanceEstimation::smote(Disease_stage~.,exp_data_SE2, perc.over = 0.5, perc.under =3 )\n",
-        "table(exp_data_SE2_smoted$Disease_stage)"
-      ],
-      "metadata": {
-        "id": "KSi2gYAbvRha",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 231
-        },
-        "outputId": "be2f557e-a01c-47c5-8979-68b80a987dad"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "also installing the dependencies ‘BBmisc’, ‘checkmate’, ‘parallelMap’\n",
-            "\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "\n",
-              "  IV Rest \n",
-              " 614 1000 "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "\n",
-              "  IV Rest \n",
-              " 921  921 "
-            ]
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### **5. Random Forest**\n",
-        "\n",
-        "Random Forest is a versatile and widely used machine learning algorithm that combines the power of multiple decision trees to create a robust and accurate predictive model. It is a type of ensemble learning, where multiple models are trained and combined to improve performance and reduce overfitting.\n"
-      ],
-      "metadata": {
-        "id": "c_b5P_Hs0oIA"
       }
     },
     {
@@ -310,19 +232,108 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#Random Forest - training and test set\n",
-        "colnames(exp_data_SE2_smoted) <- gsub('-','_',colnames(exp_data_SE2_smoted))\n",
-        "selected.samples<-sample(c(1:nrow(exp_data_SE2_smoted)),size = nrow(exp_data_SE2_smoted)*0.7)\n",
-        "train.data<-exp_data_SE2_smoted[selected.samples,]\n",
-        "test.data<-exp_data_SE2_smoted[-selected.samples,]"
+        "**SMOTE (Synthetic Minority Over-sampling Technique)**: A method used to address the issue of imbalanced datasets in machine learning. It helps balance the classes by creating synthetic examples of the minority class rather than simply duplicating existing ones. This makes the dataset more suitable for training machine learning models, which often perform poorly on imbalanced datasets."
       ],
       "metadata": {
-        "id": "WPFwY1I0vReT"
+        "id": "HOeDALpXNmK8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#split into testing and training set\n",
+        "exp_data_SE2$Disease_stage <- as.factor(exp_data_SE2$Disease_stage)\n",
+        "\n",
+        "colnames(exp_data_SE2) <- gsub('-','_',colnames(exp_data_SE2))\n",
+        "\n",
+        "set.seed(3)  # reproducibility\n",
+        "\n",
+        "# Count how many samples you want in test (~30%)\n",
+        "n_total <- nrow(exp_data_SE2)\n",
+        "n_test_target <- round(0.3 * n_total)\n",
+        "\n",
+        "# Get indices for Rest and IV\n",
+        "rest_idx <- which(exp_data_SE2$Disease_stage == \"Rest\")\n",
+        "iv_idx   <- which(exp_data_SE2$Disease_stage == \"IV\")\n",
+        "\n",
+        "# Balanced sampling: take equal numbers from Rest and IV\n",
+        "n_each <- floor(n_test_target / 2)\n",
+        "\n",
+        "# If one class has fewer samples than n_each, cap at that\n",
+        "n_each <- min(n_each, length(rest_idx), length(iv_idx))\n",
+        "\n",
+        "# Sample indices\n",
+        "test_idx <- c(\n",
+        "  sample(rest_idx, n_each),\n",
+        "  sample(iv_idx, n_each)\n",
+        ")\n",
+        "\n",
+        "# Build test and train sets\n",
+        "test.data  <- exp_data_SE2[test_idx, ]\n",
+        "train.data <- exp_data_SE2[-test_idx, ]\n",
+        "\n",
+        "# Check sizes and balance\n",
+        "table(test.data$Disease_stage)\n",
+        "table(train.data$Disease_stage)"
+      ],
+      "metadata": {
+        "id": "6tJHJBqoZ0jN"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "install.packages('mice')\n",
+        "install.packages('smotefamily')\n",
+        "library(mice)\n",
+        "library(smotefamily)\n",
+        "\n",
+        "# Separate predictors and target\n",
+        "X <- train.data[, -which(names(train.data) == \"Disease_stage\")]\n",
+        "y <- train.data$Disease_stage\n",
+        "\n",
+        "# Impute missing values in X\n",
+        "imp <- mice(X, m = 1, maxit = 5, method = 'pmm', seed = 123)\n",
+        "X_imputed <- complete(imp)\n",
+        "\n",
+        "# Check for NAs\n",
+        "anyNA(X_imputed)  # should be FALSE\n",
+        "\n",
+        "# Convert target to numeric (1 = IV, 0 = Rest)\n",
+        "y_numeric <- ifelse(y == \"IV\", 1, 0)\n",
+        "\n",
+        "# Apply SMOTE\n",
+        "smote_result <- SMOTE(X_imputed, y_numeric, K = 5)\n",
+        "\n",
+        "# Rebuild training data with synthetic samples\n",
+        "train.data_smote <- smote_result$data\n",
+        "names(train.data_smote)[ncol(train.data_smote)] <- \"Disease_stage\"\n",
+        "train.data_smote$Disease_stage <- ifelse(train.data_smote$Disease_stage == 1, \"IV\", \"Rest\")\n",
+        "train.data_smote$Disease_stage <- as.factor(train.data_smote$Disease_stage)\n",
+        "\n",
+        "# Check balance\n",
+        "table(train.data_smote$Disease_stage)"
+      ],
+      "metadata": {
+        "id": "jEgV__aWagoX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **5. Random Forest**\n",
+        "\n",
+        "Random Forest is a versatile and widely used machine learning algorithm that combines the power of multiple decision trees to create a robust and accurate predictive model. It is a type of ensemble learning, where multiple models are trained and combined to improve performance and reduce overfitting.\n"
+      ],
+      "metadata": {
+        "id": "c_b5P_Hs0oIA"
+      }
     },
     {
       "cell_type": "markdown",
@@ -340,7 +351,7 @@
       "source": [
         "install.packages(\"Boruta\")\n",
         "library(Boruta)\n",
-        "bor<-Boruta(Disease_stage~.,data=train.data)\n",
+        "bor<-Boruta(Disease_stage~.,data=train.data_smote)\n",
         "plot(bor)\n",
         "bor\n",
         "bor_confirmed <- data.frame(bor$finalDecision[bor$finalDecision %in% \"Confirmed\"])\n",
@@ -354,7 +365,7 @@
         },
         "outputId": "7bb6e1d4-e6a2-4473-a2c9-461abb850cc4"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +426,7 @@
         "install.packages(\"randomForest\")\n",
         "library(randomForest)\n",
         "set.seed(1)  # Setting seed\n",
-        "rf<-randomForest(Disease_stage~.,data=train.data, ntree = 500)"
+        "rf<-randomForest(Disease_stage~.,data=train.data_smote, ntree = 500)"
       ],
       "metadata": {
         "id": "Vvh4t0JcvcFG",
@@ -424,7 +435,7 @@
         },
         "outputId": "d1c9c140-6c8b-4044-b182-1f1cb8e96d46"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +498,7 @@
         },
         "outputId": "8e9a33e0-67ad-4ff9-be05-5e85888acef1"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,7 +568,7 @@
         "library(ROCR)\n",
         "#OOB AUC\n",
         "pred1=predict(rf,type = \"prob\")\n",
-        "perf = prediction(as.numeric(pred1[,2]),train.data$Disease_stage)\n",
+        "perf = prediction(as.numeric(pred1[,2]),train.data_smote$Disease_stage)\n",
         "# 1. Area under curve\n",
         "auc = performance(perf, \"auc\")\n",
         "auc <- as.numeric(auc@y.values)\n",
@@ -577,7 +588,7 @@
         },
         "outputId": "cdfbe793-7d1b-41a7-fca2-1b157bbbf735"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,7 +674,7 @@
         },
         "outputId": "1a3b63d3-4396-4fe2-e88e-a9c1a0c1b081"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,7 +752,7 @@
         },
         "outputId": "ed1ce9c9-e9db-4a8d-b9d9-878c8268f609"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
