--- a/Day_1.ipynb
+++ b/Day_1.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "mount_file_id": "1_f13vfylcvTK96q56R_5zBDsCeE7kPTg",
-      "authorship_tag": "ABX9TyOv/OBNZvd5XeQLuQBBgKuO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -728,8 +726,8 @@
       "source": [
         "**2.Calculate quality control metrics**\n",
         "\n",
-        "* sc.pp.calculate_qc_metrics(data, percent_top=(50/\n",
-        "100/200/500),inplace=True, log1p=False, )"
+        "* sc.pp.calculate_qc_metrics(data, percent_top=(50,\n",
+        "100,200,500),inplace=True, log1p=False, )"
       ],
       "metadata": {
         "id": "qkwycChiOoKn"
