--- a/Day_1.ipynb
+++ b/Day_1.ipynb
@@ -1001,7 +1001,7 @@
       "source": [
         "**1. Perform leiden clustering, then visualise clusters on the UMAP**\n",
         "* sc.tl.leiden(data, resolution=0.2)\n",
-        "* sc.pl.umap(data, colour=['Leiden'])"
+        "* sc.pl.umap(data, color=['leiden'])"
       ],
       "metadata": {
         "id": "yweK0ua0qp89"
