--- a/Day_1.ipynb
+++ b/Day_1.ipynb
@@ -2293,7 +2293,7 @@
       "cell_type": "markdown",
       "source": [
         "**5. To plot the gene expression of carcinoma GWAS genes, convert this to a list**\n",
-        "* genes=[gene for gene in gwasgenes['geneName'].tolist() if gene !='Intergenic']"
+        "* genes=[gene for gene in gwasgenes['geneName'].tolist() if gene !='Intergenic' and gene in hu.raw.var_names]"
       ],
       "metadata": {
         "id": "lozKTpdSz6Tn"
