--- a/Day_2.ipynb
+++ b/Day_2.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNJTpKtKaMUYB26omR0Uli",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,36 +70,10 @@
         "install.packages(\"WebGestaltR\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kuJ5U94iNXlz",
-        "outputId": "e3c5efb0-f2c5-4e18-dbe0-17fa43451011"
+        "id": "kuJ5U94iNXlz"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "'getOption(\"repos\")' replaces Bioconductor standard repositories, see\n",
-            "'help(\"repositories\", package = \"BiocManager\")' for details.\n",
-            "Replacement repositories:\n",
-            "    CRAN: https://cran.rstudio.com\n",
-            "\n",
-            "Bioconductor version 3.20 (BiocManager 1.30.25), R 4.4.2 (2024-10-31)\n",
-            "\n",
-            "Installing package(s) 'BiocVersion', 'limma'\n",
-            "\n",
-            "also installing the dependency ‘statmod’\n",
-            "\n",
-            "\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -159,7 +132,7 @@
     {
       "cell_type": "code",
       "source": [
-        "rownames(exp_data)<-metadatadata$CellID\n",
+        "rownames(exp_data)<-metadata$CellID\n",
         "colnames(exp_data)<-var_data$Gene\n",
         "\n",
         "head(exp_data)"
@@ -185,10 +158,23 @@
       "source": [
         "cells_per_patient <- metadata %>%\n",
         "  group_by(Patient) %>%\n",
-        "  tally()"
+        "  tally()\n",
+        "names(cells_per_patient) <- c('Patient','Total_Cells')\n",
+        "cells_per_patient"
       ],
       "metadata": {
         "id": "9Nhcnw3xQKsD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "head(cells_per_patient)"
+      ],
+      "metadata": {
+        "id": "MBPUk99wb1IK"
       },
       "execution_count": null,
       "outputs": []
@@ -231,7 +217,8 @@
       "source": [
         "cells_per_stage <- metadata %>%\n",
         "  group_by(Disease_stage) %>%\n",
-        "  tally()"
+        "  tally()\n",
+        "names(cells_per_stage) <- c('Disease_stage','Total_Cells')"
       ],
       "metadata": {
         "id": "wnLvaEGXRlK1"
@@ -265,7 +252,7 @@
     {
       "cell_type": "code",
       "source": [
-        "cell_counts <- obs_data %>%\n",
+        "cell_counts <- metadata %>%\n",
         "  group_by(Celltype, Disease_stage) %>%\n",
         "  tally()"
       ],
@@ -340,7 +327,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "dim(secretorymeta)\n",
+        "dim(secretoryexp)"
+      ],
       "metadata": {
         "id": "XmxTnIUHTDg3"
       },
@@ -405,7 +395,7 @@
       "cell_type": "code",
       "source": [
         "top20genes <- topTable(fit, coef = 2, number = 20)\n",
-        "print(top20genes"
+        "print(top20genes)"
       ],
       "metadata": {
         "id": "gKUDkV2CVEfb"
@@ -536,6 +526,17 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "SE1"
+      ],
+      "metadata": {
+        "id": "o3Hwyv_5dwTy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "**3. Save as rank files for input to webgestalt**"
@@ -547,12 +548,23 @@
     {
       "cell_type": "code",
       "source": [
-        "write.table(SE1, file = \"~/Documents/datasciencecourse/SE1rankedgenes.rnk\", sep = \"\\t\", row.names = FALSE, col.names = FALSE, quote = FALSE)\n",
-        "write.table(SE2, file = \"~/Documents/datasciencecourse/SE2rankedgenes.rnk\", sep = \"\\t\", row.names = FALSE, col.names = FALSE, quote = FALSE)\n",
-        "write.table(STIC, file = \"~/Documents/datasciencecourse/STICrankedgenes.rnk\", sep = \"\\t\", row.names = FALSE, col.names = FALSE, quote = FALSE)"
+        "write.table(SE1, file = \"/content/SE1rankedgenes.rnk\", sep = \"\\t\", row.names = FALSE, col.names = FALSE, quote = FALSE)\n",
+        "write.table(SE2, file = \"/content/SE2rankedgenes.rnk\", sep = \"\\t\", row.names = FALSE, col.names = FALSE, quote = FALSE)\n",
+        "write.table(STIC, file = \"/content/STICrankedgenes.rnk\", sep = \"\\t\", row.names = FALSE, col.names = FALSE, quote = FALSE)"
       ],
       "metadata": {
         "id": "mcshoCYFdK-c"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SE1"
+      ],
+      "metadata": {
+        "id": "72sD6wDLdrPb"
       },
       "execution_count": null,
       "outputs": []
@@ -571,17 +583,17 @@
       "source": [
         "SE1Result <- WebGestaltR(\n",
         "  enrichMethod = \"GSEA\", organism = \"hsapiens\",\n",
-        "  enrichDatabase = \"pathway_KEGG\", interestGeneFile = \"~/Documents/datasciencecourse/SE1rankedgenes.rnk\",\n",
+        "  enrichDatabase = \"pathway_KEGG\", interestGeneFile = \"/content/SE1rankedgenes.rnk\",\n",
         "  interestGeneType = \"genesymbol\", sigMethod = \"top\", topThr = 10, minNum = 5)\n",
         "\n",
         "SE2Result <- WebGestaltR(\n",
         "  enrichMethod = \"GSEA\", organism = \"hsapiens\",\n",
-        "  enrichDatabase = \"pathway_KEGG\", interestGeneFile = \"~/Documents/datasciencecourse/SE2rankedgenes.rnk\",\n",
+        "  enrichDatabase = \"pathway_KEGG\", interestGeneFile = \"/content/SE2rankedgenes.rnk\",\n",
         "  interestGeneType = \"genesymbol\", sigMethod = \"top\", topThr = 10, minNum = 5)\n",
         "\n",
         "STICResult <- WebGestaltR(\n",
         "  enrichMethod = \"GSEA\", organism = \"hsapiens\",\n",
-        "  enrichDatabase = \"pathway_KEGG\", interestGeneFile = \"~/Documents/datasciencecourse/STICrankedgenes.rnk\",\n",
+        "  enrichDatabase = \"pathway_KEGG\", interestGeneFile = \"/content/STICrankedgenes.rnk\",\n",
         "  interestGeneType = \"genesymbol\", sigMethod = \"top\", topThr = 10, minNum = 5)"
       ],
       "metadata": {
