--- a/Day_3.ipynb
+++ b/Day_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlpQO+9oPqHYl3fz24s5ZK",
+      "authorship_tag": "ABX9TyOxZmcK2baPFaExYW2+fCd1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "H-XwBIkUk9DX"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
         "id": "BuEE6rSIn69b",
         "outputId": "2451737b-f8eb-4af6-d917-ba8853e54c84"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +191,7 @@
         "id": "OO_3K4pOn67S",
         "outputId": "a68e8ae8-d77f-4497-ff12-7ff480d27c82"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
         "id": "IZUgnREdsbT3",
         "outputId": "d0c64280-e226-406a-9c47-f59509372174"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -369,7 +369,7 @@
         "id": "0LG6QNG1n645",
         "outputId": "c202564e-e1db-43b8-d9e9-f70a3a45a9a8"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +408,7 @@
         "id": "-BkQJPflrl7S",
         "outputId": "7cda0d31-db2b-4eda-c8cc-be443ab5ee41"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +454,7 @@
         "id": "fSQvV9sBh9_x",
         "outputId": "7d84a315-c331-4ada-d0e3-78efb45daf90"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,11 +542,11 @@
         "plot(bayes_Choice2[,\"mu\"])\n",
         "\n",
         "bayes_Choice1_Choice2 <-  ttestBF(x= compilation_Choice1$Entropy, y=compilation_Choice2$Entropy,\n",
-        "                           posterior = TRUE ,iterations = 1000, paired = TRUE)\n",
+        "                           posterior = TRUE ,iterations = 1000, paired = FALSE)\n",
         "\n",
         "post_Choice1<- data.frame(mu = as.numeric(bayes_Choice1[,\"mu\"]), Posterior = 'Choice 1')\n",
         "post_Choice2<- data.frame(mu = as.numeric(bayes_Choice2[,\"mu\"]), Posterior = 'Choice 2')\n",
-        "post_Choice1_Choice2<- data.frame(mu = as.numeric(bayes_Choice1_Choice2[,\"mu\"]), Posterior = 'Choice 1 & Choice 2')"
+        "post_Choice1_Choice2<- data.frame(mu = as.numeric(bayes_Choice1_Choice2[,\"beta (x-y)\"]), Posterior = 'Choice 1 & Choice 2')"
       ],
       "metadata": {
         "id": "UYfPVj4xn62a"
